<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/myblue"
    tools:context=".Start">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="107dp"
        tools:layout_editor_absoluteY="216dp">

        <TextView
            android:id="@+id/Welcome"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center"
            android:text="@string/WelcomeTextView"
            android:background="@color/white"
            android:textSize="30sp"
            android:layout_marginVertical="50dp"/>


        <TextView
            android:id="@+id/Howmuch"
            android:layout_width="match_parent"
            android:layout_height="51dp"
            android:gravity="center"
            android:text="@string/Howmuch"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/Enteramount"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:text="@string/enteramount"
            android:inputType="text"
            android:textAlignment="center"/>

        <Button
            android:id="@+id/btnStartGame"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rectangle"
            android:onClick="MainStartClick"
            android:text="@string/play_button"
            android:layout_marginVertical="25dp"/>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>